# deepstream_grpc_action_recognition

./: .gitignore  README.md  copyModels.sh  main_script.sh
Classification_App/Docker-info/: Dockerfile  requirements.txt  rundocker.sh
Classification_App/pyskl/: checkmminstall.py  main_run.sh  modelLocationInfo.txt  poseExtract.sh  requirements.txt  train_test_run_code.txt
Classification_App/pyskl/config_mm/posec3d/slowonly_r50_gym/: joint.py
Classification_App/pyskl/config_mm/posec3d/slowonly_r50_ntu60_xview/: joint.py
Classification_App/pyskl/configs/cnn1d/: j.py
Classification_App/pyskl/configs/dgstgcn/ntu60_xsub_3dkp/: j_1dhm.py
Classification_App/pyskl/configs/dgstgcn/ntu60_xsub_hrnet/: j.py
Classification_App/pyskl/configs/multi_branch_posec3d/slowonly_r50_ait/: joint.py
Classification_App/pyskl/configs/posec3d/slowonly_r50_1dhm_ntu60_xsub/: joint.py  joint_1dhm.py
Classification_App/pyskl/configs/posec3d/slowonly_r50_ait/: joint.py  joint_1dhm.py  joint_1dhm_3d_gcn_atwaist.py  joint_1dhm_model_remastered.py  joint_1dhm_small_3_5_2.py  joint_3d_dgstgcn.py  joint_3d_dgstgcn_simplified.py  joint_3d_gcn.py  joint_3d_gcn_atwaist.py  joint_3d_gcn_atwaist_3_5_2.py  joint_3d_gcn_dgtcn.py  joint_3d_gcn_tcn.py  joint_3d_gcn_tcn_feature_extract.py  joint_3d_gcn_tcn_run.py  limb.py
Classification_App/pyskl/configs/posec3d/slowonly_r50_ntu60_xsub/: joint.py  joint_1dhm.py  joint_3d_gcn.py  joint_3d_gcn_atwaist.py  joint_3d_gcn_tcn.py  joint_3d_gcn_tcn_2_2_2.py
Classification_App/pyskl/configs/posec3d/slowonly_r50_ntu60_xview/: joint.py
Classification_App/pyskl/configs/stgcn++/stgcn++_ait_hrnet/: j_1dhm.py
Classification_App/pyskl/configs/stgcn++/stgcn++_ntu60_xsub_hrnet/: j_1dhm.py
Classification_App/pyskl/demo/: demo_skeleton.py
Classification_App/pyskl/examples/extract_aitdatasets/: aitdata_to_json.py  aitdataset_poseextract.ipynb  allvdoinOne.py
Classification_App/pyskl/gRPC/: aitdata_labels.txt  detector.proto  detector_pb2.py  detector_pb2.pyi  detector_pb2_grpc.py  greeter_server.py  greeter_server_b4_april_18_meeting_version.py  greeter_server_simple.py  inference.py  read.txt  run.sh
Classification_App/pyskl/pyskl/apis/: __init__.py  inference.py
Classification_App/pyskl/pyskl/core/: evaluation.py
Classification_App/pyskl/pyskl/datasets/pipelines/: __init__.py  (+2 more)
Classification_App/pyskl/tools/: dist_run.sh  dist_test.sh  dist_train.sh  train.py
Classification_App/pyskl/tools/data/: custom_2d_skeleton.py
Deepstream_App/Deepstream-app/: README.md  setup_deepsort.sh
Deepstream_App/Deepstream-app/deepsort/: convert.py
Deepstream_App/Deepstream-app/deepstream_grpc/: CMakeLists.txt  Makefile  README.md  config.txt  config_tracker_DeepSORT.yml  deepstream_action_config_parse.cpp  deepstream_pose_estimation_app.cpp  deepstream_pose_estimation_config.txt  detector.proto  dstest2_tracker_config.txt  run.sh
Deepstream_App/Deepstream-app/deepstream_grpc/cmake/: GenGRPC.cmake
Deepstream_App/Deepstream-app/deepstream_yolo_vitpose_grpc/: README.md  build_grpc.sh  config.txt  deepstream_action.h  deepstream_pose_estimation_app.cpp  dstest2_pgie_config.txt  dstest2_sgie1_config.txt  dstest2_tracker_config.txt  post_process.cpp  run.sh  yolov6s.cfg
Deepstream_App/Deepstream-app/deepstream_yolo_vitpose_grpc/nvdsinfer_custom_impl_Yolo/: Makefile
Deepstream_App/Docker-info/: Dockerfile  rundocker.sh
(+2 files in other folders)
